--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items"><a href="index.html" class="nav__links">INICI</a></li>
-                <li class="nav__items"><a href="Sobrenosaltres.html" class="nav__links">SOBRE NOSALTRES</a></li>
+                <li class="nav__items"><a href="sobrenosaltres.html" class="nav__links">SOBRE NOSALTRES</a></li>
                 <li class="nav__items"><a href="espai.html" class="nav__links">EL TEU ESPAI</a></li>
                 <li class="nav__items dropdown">
-                    <a href="Metodes.html" class="nav__links">MÈTODES D'ESTUDI</a>
+                    <a href="metodes.html" class="nav__links">MÈTODES D'ESTUDI</a>
                     <div class="dropdown-content">
                         <a href="pomodoro.html"><i class="fas fa-lightbulb"></i> Pomodoro </a>
                         <a href="flashcard.html"><i class="fas fa-brain"></i> Flashcard </a>
